# ragdocs-mcp

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  PLAN_SUMMARY.md  README.md  SECURITY.md  docker-compose.yml  example-optimized-config.toml  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
deployment/: mcp-ragdocs.service
docs/: architecture.md  configuration.md  context-efficiency.md  development.md  hybrid-search.md  integration.md  memory.md  migration-v1.5.md  techniques.md  test-gap-analysis-report.md  troubleshooting.md
docs/backlog/: performance-safety-improvements.md
docs/guides/: multi-project-setup.md
docs/plans/: 00-ragdocs-v2-refactor-overview.md  01-memory-removal-and-surface-simplification.md  02-global-daemon-huey-and-soft-projects.md  03-tranche-implementation-roadmap.md  04-daemon-zmq-control-plane-contract.md  05-huey-task-and-cli-contract.md  06-tranche-1-memory-removal-implementation.md  07-global-store-and-schema-contract.md  08-search-and-ranking-contract.md  09-global-daemon-multi-corpus-runtime-refactor.md  16-memory-management-plan-REVISED.md  16-memory-management-plan.md  17-search-overhaul-plan.md  git-history-search.md  memory-graph-enhancement-analysis.md  remove-index-snapshots.md  sqlite-refactor.md
docs/specs/: 15-git-history-search.md  16-memory-management.md  17-search-overhaul.md  18-temporal-fact-graph.md  19-self-healing-indices.md  20-vector-index-thread-safety.md  (+11 more)
examples/: README.md  claude-desktop-config.json  config-development.toml  config-documentation.toml  config-minimal.toml  config-multi-project.toml  config-obsidian.toml  docker-compose.example.yml  vscode-mcp-settings.json
scripts/: dev.sh  lint.sh  test.sh
specs/: 01-overview-and-goals.md  02-architecture-and-tech-stack.md  03-core-features.md  04-testing-strategy.md  05-configuration.md  06-hybrid-search-strategy.md  07-observability-and-management.md  08-document-chunking.md  09-aggregate-scoring-system.md  10-multi-project-support.md  11-search-quality-improvements.md  12-context-compression.md  13-txt-file-chunking.md  14-excluded-files-filter.md  PLAN-phase-3-4-implementation.md
src/: cli.py  config.py  context.py  lifecycle.py  mcp_server.py  models.py  server.py  utils.py
tests/: conftest.py
(+326 files in other folders)
